--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -13,9 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: 123456
-  socket: /var/run/mysqld/mysqld.sock
+  username: 
+  password:
 
 development:
   <<: *default
@@ -26,7 +25,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: deploy-with-capistrano_test
+  database: deploycapistrano_test 
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
